force-app/main/default/objects/custom_create102__c/custom_create102__c.object-meta.xml
<CustomObject>
    <label>Custom created object102</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects102</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>