force-app/main/default/objects/custom_create102__c/fields/custom_create_102field551__c.field-meta.xml
<CustomField>
    <fullName>custom_create_102field551__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 102field551</label>
    <type>Checkbox</type>
</CustomField>