force-app/main/default/objects/custom_create102__c/fields/custom_create_102field583__c.field-meta.xml
<CustomField>
    <fullName>custom_create_102field583__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 102field583</label>
    <type>Checkbox</type>
</CustomField>